add 15 week exercise 1

--- a/week 5/Assets/slyles/alivio.css
+++ b/week 5/Assets/slyles/alivio.css
@@ -101,7 +101,7 @@ a:hover {
 }
 
 .hero_content {
-    display: ;
+    display: none;
     width: 440px;
     height: 384px;
     margin-left: 275px;
